integrate theme the hard sloppy way

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Coming Soon App",
+  "name": "Coming-Soon-App",
   "version": "1.0.0",
   "description": "create and edit your own coming soon page in minutes!",
   "main": "index.js",
@@ -20,14 +20,27 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-survivejs-kanban": "^0.3.3",
+    "bootstrap-sass": "^3.3.6",
     "css-loader": "^0.23.1",
+    "node-sass": "^3.7.0",
     "npm-install-webpack-plugin": "^3.1.0",
+    "resolve-url-loader": "^1.4.3",
+    "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.12.0"
   },
   "dependencies": {
+    "bootstrap": "^3.3.6",
+    "bootstrap-webpack": "0.0.5",
+    "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "imports-loader": "^0.6.5",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "node-uuid": "^1.4.7",
     "react": "^15.0.2",
     "react-dom": "^15.0.2"
