--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-survivejs-kanban": "^0.3.3",
     "bootstrap-sass": "^3.3.6",
     "css-loader": "^0.23.1",
+    "image-webpack-loader": "^1.8.0",
     "node-sass": "^3.7.0",
     "npm-install-webpack-plugin": "^3.1.0",
     "resolve-url-loader": "^1.4.3",
